# gesture_recognition_thesis

./: .gitignore  odobesku_diploma.odt
c++/background_subtraction/: CMakeLists.txt  background_subtraction.cpp
c++/bayessian_classificator/: CMakeLists.txt  Makefile  classificator.cpp  classificator.hpp  continuous_matrix.cpp  continuous_matrix.hpp  exp.cpp  filter_model  filter_model.cpp  general_defines.hpp  main  main.cpp  process_opencv.cpp  process_realsense.cpp  show_model_representation  show_model_representation.cpp  train.cpp  train_from_folder.cpp  train_from_realsense.cpp
c++/color_filter/: main.cpp
c++/first_try_realsense/: CMakeLists.txt  main.cpp
c++/realsense/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  realsense.cpp
c++/second_try/: CMakeLists.txt  main.cpp
c++/skin-detect/: skin-detect.cpp
python/: background_sub.py  feature_extraction_video.py  filtering.py  find_contours.py  graph_segmentation.py  region_analysis.py  thresholding.py
python/bayesian_approach/: bayesian_model.py  main.py  train.py
python/ex1/: main.py
python/haar/: haar.py
python/photo_capture/: main.py
python/trash/: first.py  prog1.py  prog2.py  prog3.py  test.py  trash.py
